# acceptance-analysis

./: .gitignore  README.md  REFACTORING_SUMMARY.md  aa_helpers.py  acceptance-analysis.ipynb  analysis_scripts.py  analyze-df.ipynb  background-plot.ipynb  data_preparation.py  intial_analysis_scripts.py  make-df.ipynb  prepare_data.py  pyproject.toml  аnalysis-effective-mass-lambda.ipynb
