[project]
name = "acceptance-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.4.5",
    "matplotlib",
    "numpy",
    "scipy",
    "pandas",
    "jupyter",
    "pyarrow",
    "seaborn",
    "pandas-stubs==2.3.2.250926",
]
