[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acceptance-analysis"
version = "0.1.1"
description = "Lambda particle decay analysis for EIC acceptance studies"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.4.5",
    "matplotlib",
    "numpy",
    "scipy",
    "pandas",
    "jupyter",
    "pyarrow",
    "seaborn",
    "pandas-stubs",
]

